# matchms

./: .gitignore  README.rst  main.py  pyproject.toml
.github/workflows/: CI_first_code_check.yml
matchms/: Spectrum.py
tests/: test_internal_loss.py
tests/testdata/: testdata_small.mgf
