[project]
name = "matchms"
version = "0.28.2"
description = "Python library for large-scale comparisons and processing of tandem mass spectral data"
authors = [
  { name = "matchms developer team", email = "florian.huber@hs-duesseldorf.de" }
]
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
readme = "README.rst"
keywords = [ "similarity measures", "mass spectrometry", "fuzzy matching", "fuzzy search" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
urls = { repository = "https://github.com/matchms/matchms", documentation = "https://matchms.readthedocs.io/en/latest/" }


dependencies = [
    "deprecated>=1.2.14",
    "lxml~=4.9.3",
    "matplotlib>=3.7",
    "networkx~=3.4.2",
    "numba~=0.60.0",
    "numpy>=1.24",
    "pandas~=2.2.3",
    "pickydict>=0.4.0",
    "pillow!=9.4.0",
    "pubchempy>=1.0.4",
    "pyteomics>=4.6",
    "pyyaml>=6.0.1",
    "rdkit~=2024.3.5",
    "requests>=2.31.0",
    "scipy~=1.14.1",
    "sparsestack>=0.6.0",
    "tqdm>=4.65.0",
]

[dependency-groups]
dev = [
    "black~=23.7.0",
    "decorator~=5.1.1",
    "isort~=5.12.0",
    "prospector[with-pyroma]~=1.10.2",
    "pylint~=2.17.5",
    "pytest~=7.4.0",
    "pytest-cov~=4.1.0",
    "testfixtures~=7.1.0",
    "twine~=5.1.0",
    "yapf~=0.40.1",
]
docs = [
    "sphinx<7",
    "sphinx-rtd-theme~=1.2.2",
    "sphinxcontrib-apidoc~=0.3.0",
]

[tool.setuptools.packages.find]
include = ["matchms*"]
exclude = ["paper*", "readthedocs*"]

[tool.isort]
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
no_lines_before = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
lines_after_imports = 2
known_first_party = "matchms"
skip = "readthedocs/conf.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "integration-tests",
]

[build_sphinx]
source-dir = "docs"
build-dir = "docs/_build"
all_files = 1
builder = "html"
